--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Expert Python, AI/ML project assistance for B.Tech, M.Tech, PhD, BCA, MCA. Custom coding, reports, and research papers." />
-  <meta name="keywords" content="Python projects, AI ML projects, CSE projects, machine learning, research paper writing, BTech MTech BCA MCA" />
-  <meta name="author" content="Your Name" />
+  <meta name="keywords" content="Python projects, AI ML projects, CSE projects, machine learning projects, research paper writing, BTech MTech BCA MCA" />
   <title>Python & AI/ML Project Help </title>
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
@@ -149,7 +148,7 @@
   </header>
 
   <section class="hero">
-    <h2>Need Help with Your AI/ML or Python Project?</h2>
+    <h2>Need Help with Your AI/ML or Python Project ?</h2>
     <p>Get 100% working code, complete documentation, and research paper assistance — on time and professionally delivered.</p>
   </section>
 
