--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
       <!-- Research Paper & Documentation -->
       <div class="card">
         <h3>📄 Research Paper & Documentation</h3>
-        <p>IEEE/Scopus papers, plagiarism-free documentation, final-year project reports, synopsis & more.</p>
+        <p>Research Papers, plagiarism-free documentation, final-year project reports, synopsis & more.</p>
         <button class="toggle-btn" onclick="toggleContent(this)">Read More</button>
         <div class="more-text">
           <ul>
@@ -242,7 +242,6 @@
             <li>Supports national and international conference publication.</li>
             <li>Helps publish in free or paid journals.</li>
             <li>Scopus-indexed publication adds strong academic value.</li>
-            <li>Supports SCI, SCIE, ESCI, AHCI, ACM, Google Scholar indexing.</li>
           </ul>
         </div>
       </div>
